@@ -3,26 +3,21 @@ package com.viewnext.gestiontareas.controller;
 
 
 import java.util.List;
-import java.util.stream.Collectors;
 
-import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
-import org.springframework.web.bind.annotation.CrossOrigin;
 import org.springframework.web.bind.annotation.DeleteMapping;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
-import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
-
 import com.viewnext.gestiontareas.controller.dto.TareaDTO;
-import com.viewnext.gestiontareas.persistence.model.Tarea;
 import com.viewnext.gestiontareas.service.TareaService;
-import com.viewnext.gestiontareas.service.bo.TareaBO;
-
 import jakarta.servlet.http.HttpServletRequest;
+import lombok.RequiredArgsConstructor;
+import org.springframework.web.bind.annotation.PutMapping;
+
 
 /**
  * Clase que gestiona las peticiones REST de la clase Tarea
@@ -31,18 +26,25 @@ import jakarta.servlet.http.HttpServletRequest;
  *
  */
 
+
 @RestController
 @RequestMapping("/api/tareas")
 public class TareaController {
 	
-	@Autowired
+	
 	private TareaService tareaService;
 	
-	@Autowired
+	
 	private BoToDto boToDto;
 	
-	@Autowired
+	
 	private DtoToBo dtoToBo;
+	
+	public TareaController(TareaService tareaService, BoToDto boToDto, DtoToBo dtoToBo) {
+		this.tareaService=tareaService;
+		this.boToDto=boToDto;
+		this.dtoToBo=dtoToBo;
+	}
 	
 	
 	@PostMapping("/nueva")
@@ -57,13 +59,12 @@ public class TareaController {
 	 * @return
 	 */
 	
-	@GetMapping("/all")	
+	@GetMapping("/all")		
 	public List<TareaDTO> getAll(){
 	
 
 		return tareaService.finAll().stream()
-		        .map(boToDto::tareaBoToDto)
-		        .collect(Collectors.toList());
+		        .map(boToDto::tareaBoToDto).toList();
 
 	}
 	
@@ -82,7 +83,17 @@ public class TareaController {
 	
 	@DeleteMapping("/eliminar/{id}")
 	public void deleteTarea(@PathVariable int id) {
+		
 		tareaService.deleteTarea(id);
 	}
+	
+	
+	@PutMapping("/update")
+    public TareaDTO updateById(@RequestBody TareaDTO tareaDTO) {
+		
+		System.out.println("Provando en controler"+tareaDTO);
+		
+        return boToDto.tareaBoToDto(tareaService.update(dtoToBo.tareaDtoToBo(tareaDTO)));
+    }
 	
 }
